// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxNavbarText customize 1`] = `
<div>
  <span
    class="navbar-text bazinga"
  >
    Test
  </span>
</div>
`;

exports[`loads and displays CxNavbarText component 1`] = `
<div>
  <span
    class="navbar-text"
  >
    Test
  </span>
</div>
`;
